fixup! joan: chown tap2wake node
Change-Id: I700ef1d7c676feeccdf67e427018334634d1a4c8

--- a/rootdir/etc/init/hw/init.target.rc
+++ b/rootdir/etc/init/hw/init.target.rc
@@ -132,6 +132,10 @@ on boot
     setprop vendor.usb.dpl.inst.name "dpl"
     setprop sys.usb.configfs 1
 
+    # Double tap to wake
+    chown system system /sys/devices/virtual/input/lge_touch/tap2wake
+    chmod 664 /sys/devices/virtual/input/lge_touch/tap2wake
+
 #Peripheral manager
 service vendor.per_mgr /vendor/bin/pm-service
     class core
